<resources>
    <string name="app_name">Auto Mart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_an_account_text">Create an account</string>
    <string name="create_account_sub_label_text">We would need more information to serve you better</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in_as_buyer">Sign in as buyer</string>
    <string name="login">Login</string>
    <string name="switch_to_seller">Switch to Seller</string>
    <string name="back">back</string>
    <string name="post_ad">Post Ad</string>
    <string name="kindly_fill_in_this_form">Kindly fill in this form</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="body_type">Body type</string>
    <string name="state">State</string>
    <string name="price">Price</string>
    <string name="submit">Submit</string>
    <string name="edit_image_icon">edit image icon</string>
    <string name="mark_as_sold">Mark as sold?</string>
    <string name="home">Home</string>
    <string name="profile">profile</string>
    <string name="order">order</string>
    <string name="post_add_button">post add button</string>
    <string name="image">image</string>
    <string name="year">Year</string>
</resources>