<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".seller.PostAdFragment">

    <ImageView
        android:id="@+id/back_btn"
        style="@style/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/one_step_margin"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_label"
        style="@style/header_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/two_step_margin"
        android:text="@string/post_ad"
        android:textSize="@dimen/default_text"
        app:layout_constraintBottom_toBottomOf="@id/back_btn"
        app:layout_constraintStart_toEndOf="@id/back_btn"
        app:layout_constraintTop_toTopOf="@id/back_btn" />

    <TextView
        android:id="@+id/instruction_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/two_step_margin"
        android:layout_marginTop="@dimen/two_step_margin"
        android:paddingVertical="10dp"
        android:text="@string/kindly_fill_in_this_form"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_label" />


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/two_step_margin"
        android:layout_marginVertical="@dimen/one_step_margin"
        android:scaleType="centerCrop"
        android:src="@drawable/default_image"
        app:layout_constraintBottom_toBottomOf="@id/edit_pic_icon"
        app:layout_constraintEnd_toEndOf="@id/edit_pic_icon"
        app:layout_constraintStart_toStartOf="@id/edit_pic_icon"
        app:layout_constraintTop_toTopOf="@id/edit_pic_icon" />

    <View
        android:id="@+id/edit_pic_icon"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/third_step_margin"
        android:background="@drawable/edit_icon_bg"
        android:contentDescription="@string/edit_image_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instruction_label" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/manufacturer_layout"
        style="@style/input_layout_style"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginHorizontal="@dimen/third_step_margin"
        android:layout_marginTop="@dimen/third_step_margin"
        android:hint="@string/manufacturer"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_pic_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/manufacturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/model_layout"
        style="@style/input_layout_style"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginHorizontal="@dimen/third_step_margin"
        android:layout_marginTop="@dimen/two_step_margin"
        android:hint="@string/model"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/manufacturer_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/body_type_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/two_step_margin"
        android:layout_marginTop="@dimen/two_step_margin"
        android:background="@android:color/transparent"
        android:hint="@string/body_type"
        android:labelFor="@id/body_type"
        app:boxBackgroundColor="@android:color/transparent"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@id/state_layout"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@id/model_layout"
        app:layout_constraintTop_toBottomOf="@+id/model_layout">

        <AutoCompleteTextView
            android:id="@+id/body_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/state_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/two_step_margin"
        android:layout_marginTop="@dimen/two_step_margin"
        android:background="@android:color/transparent"
        android:hint="@string/state"
        android:labelFor="@id/state"
        app:boxBackgroundColor="@android:color/transparent"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/model_layout"
        app:layout_constraintStart_toEndOf="@id/body_type_layout"
        app:layout_constraintTop_toBottomOf="@+id/model_layout">

        <AutoCompleteTextView
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/price_layout"
        style="@style/input_layout_style"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/two_step_margin"
        android:hint="@string/price"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/model_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/model_layout"
        app:layout_constraintTop_toBottomOf="@id/body_type_layout"
        app:startIconDrawable="@drawable/ic_money">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/one_step_margin"
        android:text="@string/mark_as_sold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/price_layout"
        app:layout_constraintStart_toStartOf="@id/price_layout"
        app:layout_constraintTop_toBottomOf="@id/price_layout" />


    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/third_step_margin"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/price_layout"
        app:layout_constraintStart_toStartOf="@id/price_layout"
        app:layout_constraintTop_toBottomOf="@id/price_layout"
        app:layout_constraintVertical_bias="0.24000001" />


</androidx.constraintlayout.widget.ConstraintLayout>