<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".ads.AdFragment">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        android:src="@drawable/ferrari1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius_bottom_left="@dimen/two_step_margin"
        app:riv_corner_radius_bottom_right="@dimen/two_step_margin" />

    <ImageView
        android:id="@+id/back_btn"
        style="@style/back_button"
        android:layout_marginTop="@dimen/one_step_margin"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/model"
        style="@style/header_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/two_step_margin"
        android:layout_marginTop="@dimen/two_step_margin"
        android:text="Venza"
        android:paddingVertical="4dp"
        app:layout_constraintEnd_toStartOf="@id/flag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/one_step_margin"
        android:text="$300,000"
        android:textColor="@color/caption_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/model"
        app:layout_constraintTop_toBottomOf="@id/model" />

    <ImageView
        android:id="@+id/hot_deal_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/two_step_margin"
        android:contentDescription="hot deals"
        android:src="@drawable/ic_basket"
        app:layout_constraintBottom_toBottomOf="@id/price"
        app:layout_constraintStart_toEndOf="@id/price"
        app:layout_constraintTop_toTopOf="@id/price" />

    <TextView
        android:id="@+id/best_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/one_step_margin"
        android:text="Best price"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/hot_deal_image"
        app:layout_constraintStart_toEndOf="@id/hot_deal_image"
        app:layout_constraintTop_toTopOf="@id/hot_deal_image" />

    <TextView
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/one_step_margin"
        android:text="30 Emordi street olodi apapa, Lagos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/price"
        app:layout_constraintTop_toBottomOf="@id/price" />


    <View
        android:id="@+id/detail_view"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginHorizontal="@dimen/two_step_margin"
        android:layout_marginTop="@dimen/third_step_margin"
        android:background="@drawable/spec_bg"
        app:layout_constraintBottom_toTopOf="@+id/buy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:layout_constraintVertical_bias="0.19999999" />

    <TextView
        android:id="@+id/body_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/two_step_margin"
        android:layout_marginTop="@dimen/two_step_margin"
        android:text="@string/body_type"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/detail_view"
        app:layout_constraintTop_toTopOf="@id/detail_view" />

    <TextView
        android:id="@+id/body_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SUV 5 doors"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/body_type_label"
        app:layout_constraintTop_toBottomOf="@id/body_type_label" />

    <TextView
        android:id="@+id/year_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_step_margin"
        android:layout_marginEnd="@dimen/two_step_margin"
        android:text="@string/year"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/detail_view"
        app:layout_constraintTop_toTopOf="@id/detail_view" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2014"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/year_label"
        app:layout_constraintTop_toBottomOf="@id/year_label" />


    <TextView
        android:id="@+id/manufacturer_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/two_step_margin"
        android:layout_marginTop="@dimen/two_step_margin"
        android:gravity="center_horizontal"
        android:paddingVertical="@dimen/one_step_margin"
        android:text="@string/manufacturer"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/detail_view"
        app:layout_constraintStart_toStartOf="@id/detail_view"
        app:layout_constraintTop_toBottomOf="@id/body_type" />

    <TextView
        android:id="@+id/manufacturer"
        style="@style/header_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Toyota"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/manufacturer_label"
        app:layout_constraintStart_toStartOf="@id/manufacturer_label"
        app:layout_constraintTop_toBottomOf="@id/manufacturer_label" />


    <TextView
        android:id="@+id/flag"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_step_margin"
        android:layout_marginEnd="@dimen/two_step_margin"
        android:background="@drawable/flag_bg"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="flag"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/third_step_margin"
        android:text="Buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/contact"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contact"
        app:layout_constraintBottom_toBottomOf="@id/buy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buy"
        app:layout_constraintTop_toTopOf="@id/buy" />

</androidx.constraintlayout.widget.ConstraintLayout>